# mohang

./: .gitignore  .gitmodules  Dockerfile.nginx  Jenkinsfile  LICENSE  README.md  Taskfile.yml  compose.dev.yaml  compose.frontend.yaml  compose.local.yaml  compose.metrics.yaml  compose.monitoring.yaml  compose.prod.yaml  deploy.sh  package-lock.json  pyproject.toml  test.md
ai/: Dockerfile  README.md  containers.py  main.py  pyproject.toml
ai/model/: Recommendation.py
ai/model/application/: model_service.py  model_service_test.py
ai/model/data/: data.pkl  modified_preference_list.pkl
ai/model/domain/repository/: model_repo.py
ai/model/infra/repository/: model_repo.py
ai/model/interface/controllers/: model_controller.py  model_controller_test.py
ai/model_serving/application/: model_service.py  model_service_test.py
ai/model_serving/documentation/: model_controller_docs.py
ai/model_serving/domain/repository/: model_repo.py
ai/model_serving/infra/repository/: model_repo.py
ai/model_serving/interface/controllers/: model_controller.py  model_controller_test.py
ai/model_serving/interface/model/: location.py
ai/src/: main.py
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.prod  build.gradle  run_server.sh
frontend/: .gitignore  Dockerfile.dev  Dockerfile.front  index.html  install_package.sh  package-lock.json  package.json  pnpm-lock.yaml  sonar-project.properties  vite.config.js
monitoring/: .gitignore
nginx/: .gitignore  Dockerfile  Dockerfile.dev  Dockerfile.local  Dockerfile.prod  nginx.conf
(+718 files in other folders)
